@@ -5,6 +5,7 @@ import com.doo.xhp.screen.MenuScreen;
 import com.terraformersmc.modmenu.api.ConfigScreenFactory;
 import com.terraformersmc.modmenu.api.ModMenuApi;
 
+import java.util.Collections;
 import java.util.Map;
 
 public class ModMenu implements ModMenuApi {
@@ -16,6 +17,6 @@ public class ModMenu implements ModMenuApi {
 
     @Override
     public Map<String, ConfigScreenFactory<?>> getProvidedConfigScreenFactories() {
-        return Map.of(XHP.MOD_ID, getModConfigScreenFactory());
+        return Collections.singletonMap(XHP.MOD_ID, getModConfigScreenFactory());
     }
 }
